--- a/src/AFUtils.Tests/AFUtils.Tests.csproj
+++ b/src/AFUtils.Tests/AFUtils.Tests.csproj
@@ -64,8 +64,10 @@
   <ItemGroup>
     <Compile Include="FunctionContainer_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestClasses\InvocationCounter.cs" />
     <Compile Include="TestClasses\TestMessage.cs" />
     <Compile Include="TestClasses\TestMessageHandler.cs" />
+    <Compile Include="TestClasses\TestMessageHandler2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
