--- a/src/SolutionExample/Services/ServiceA/ServiceA.Host/ServiceA.Host.csproj
+++ b/src/SolutionExample/Services/ServiceA/ServiceA.Host/ServiceA.Host.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.8" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\AFUtils\AFUtils.csproj" />
+    <ProjectReference Include="..\..\..\..\AFBus\AFBus.csproj" />
     <ProjectReference Include="..\ServiceA.Messages\ServiceA.Messages.csproj" />
   </ItemGroup>
   <ItemGroup>
