--- a/src/AFBus.Tests/packages.config
+++ b/src/AFBus.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
+  <package id="WindowsAzure.Storage" version="9.0.0" targetFramework="net471" />
 </packages>
