--- a/src/AFBus.Tests/AFBus.Tests.csproj
+++ b/src/AFBus.Tests/AFBus.Tests.csproj
@@ -89,11 +89,14 @@
     <Compile Include="QueueUtils\QueueReader.cs" />
     <Compile Include="TestClasses\AnotherTestMessage.cs" />
     <Compile Include="TestClasses\InvocationCounter.cs" />
+    <Compile Include="TestClasses\Sagas\SagaData.cs" />
+    <Compile Include="TestClasses\Sagas\TestSaga.cs" />
     <Compile Include="TestClasses\TestMessage.cs" />
     <Compile Include="TestClasses\TestMessageHandler.cs" />
     <Compile Include="TestClasses\TestMessageHandler2.cs" />
     <Compile Include="Bus_Tests.cs" />
     <Compile Include="SendOnlyBus_Tests.cs" />
+    <Compile Include="Saga_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
