--- a/src/AFBus.Tests/AFBus.Tests.csproj
+++ b/src/AFBus.Tests/AFBus.Tests.csproj
@@ -84,7 +84,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionContainer_Tests.cs" />
+    <Compile Include="HandlersContainer_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueUtils\QueueReader.cs" />
     <Compile Include="TestClasses\AnotherTestMessage.cs" />
