Saga correlation works!

--- a/src/AFBus/AFBus.csproj
+++ b/src/AFBus/AFBus.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Bus\SendOnlyBus.cs" />
     <Compile Include="Container\HandlersContainer.cs" />
     <Compile Include="Container\IHandlersContainer.cs" />
-    <Compile Include="IFunction.cs" />
+    <Compile Include="IHandle.cs" />
     <Compile Include="ITraceWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -80,6 +80,7 @@
     <Compile Include="Sagas\IHandleWithCorrelation.cs" />
     <Compile Include="Sagas\ISagaStoragePersistence.cs" />
     <Compile Include="Sagas\Saga.cs" />
+    <Compile Include="Sagas\SagaData.cs" />
     <Compile Include="Sagas\SagaInfo.cs" />
     <Compile Include="Serializer\ISerializeMessages.cs" />
     <Compile Include="Serializer\JSONSerializer.cs" />
