--- a/src/AFBus.Tests/AFBus.Tests.csproj
+++ b/src/AFBus.Tests/AFBus.Tests.csproj
@@ -89,7 +89,8 @@
     <Compile Include="QueueUtils\QueueReader.cs" />
     <Compile Include="TestClasses\AnotherTestMessage.cs" />
     <Compile Include="TestClasses\InvocationCounter.cs" />
-    <Compile Include="TestClasses\Sagas\SagaData.cs" />
+    <Compile Include="TestClasses\Sagas\SagaIntermediateMessage.cs" />
+    <Compile Include="TestClasses\Sagas\TestSagaData.cs" />
     <Compile Include="TestClasses\Sagas\SagaStartingMessage.cs" />
     <Compile Include="TestClasses\Sagas\TestSaga.cs" />
     <Compile Include="TestClasses\TestMessage.cs" />
