--- a/src/AFBus.Tests/AFBus.Tests.csproj
+++ b/src/AFBus.Tests/AFBus.Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="TestClasses\AnotherTestMessage.cs" />
     <Compile Include="TestClasses\InvocationCounter.cs" />
     <Compile Include="TestClasses\Sagas\Simple\SimpleSagaIntermediateMessage.cs" />
+    <Compile Include="TestClasses\Sagas\Simple\SimpleSagaTerminatingMessage.cs" />
     <Compile Include="TestClasses\Sagas\Simple\SimpleTestSagaData.cs" />
     <Compile Include="TestClasses\Sagas\Simple\SimpleSagaStartingMessage.cs" />
     <Compile Include="TestClasses\Sagas\Simple\SimpleTestSaga.cs" />
