locks with azure blobs through configuration

--- a/src/AFBus/app.config
+++ b/src/AFBus/app.config
@@ -10,6 +10,9 @@
             <setting name="StorageConnectionString" serializeAs="String">
                 <value>UseDevelopmentStorage=true</value>
             </setting>
+            <setting name="LockSagas" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AFBus.Properties.Settings>
     </applicationSettings>
   <runtime>
