--- a/src/AFBus.Tests/AFBus.Tests.csproj
+++ b/src/AFBus.Tests/AFBus.Tests.csproj
@@ -81,6 +81,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Console, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Console.4.3.0\lib\net46\System.Console.dll</HintPath>
     </Reference>
@@ -164,6 +165,7 @@
     <Compile Include="HandlersContainer_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueUtils\QueueReader.cs" />
+    <Compile Include="SagaWithoutLock_Tests.cs" />
     <Compile Include="TestClasses\AnotherTestMessage.cs" />
     <Compile Include="TestClasses\InvocationCounter.cs" />
     <Compile Include="TestClasses\Sagas\Simple\SimpleSagaIntermediateMessage.cs" />
@@ -180,7 +182,7 @@
     <Compile Include="TestClasses\TestMessageHandler2.cs" />
     <Compile Include="Bus_Tests.cs" />
     <Compile Include="SendOnlyBus_Tests.cs" />
-    <Compile Include="Saga_Tests.cs" />
+    <Compile Include="SagaWithLock_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
