--- a/src/AFBus.Tests/app.config
+++ b/src/AFBus.Tests/app.config
@@ -1,5 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="AFBus.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <AFBus.Properties.Settings>
+      <setting name="StorageConnectionString" serializeAs="String">
+        <value>UseDevelopmentStorage=true</value>
+      </setting>
+      <setting name="LockSagas" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </AFBus.Properties.Settings>
+  </applicationSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
