--- a/src/AFBus/Properties/Settings.settings
+++ b/src/AFBus/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="StorageConnectionString" Type="System.String" Scope="Application">
       <Value Profile="(Default)">UseDevelopmentStorage=true</Value>
     </Setting>
+    <Setting Name="LockSagas" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
