--- a/src/AFBus/app.config
+++ b/src/AFBus/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <applicationSettings>
         <AFBus.Properties.Settings>
-            <setting name="StorageConnectionString" serializeAs="String">
+            <setting name="AzureWebJobsStorage" serializeAs="String">
                 <value>UseDevelopmentStorage=true</value>
             </setting>
             <setting name="LockSagas" serializeAs="String">
