--- a/src/AFBus/AFBus.csproj
+++ b/src/AFBus/AFBus.csproj
@@ -67,6 +67,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Console, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Console.4.3.0\lib\net46\System.Console.dll</HintPath>
     </Reference>
@@ -150,6 +151,7 @@
     <Compile Include="Bus\SendOnlyBus.cs" />
     <Compile Include="Container\HandlersContainer.cs" />
     <Compile Include="Container\IHandlersContainer.cs" />
+    <Compile Include="Container\SettingsUtil.cs" />
     <Compile Include="IHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
