--- a/src/SolutionExample/Sagas/OrderSaga/local.settings.json
+++ b/src/SolutionExample/Sagas/OrderSaga/local.settings.json
@@ -2,7 +2,8 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "AzureWebJobsDashboard": "UseDevelopmentStorage=true"
+    "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
+    "LockSagas": "True"
   },
   "Host": {
     "LocalHttpPort": 7071,
