--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /src/SolutionExample/Sagas/OrderSagaMessages/bin/Release
 /src/SolutionExample/Services/PaymentService.Messages/bin/Release
 /src/SolutionExample/Services/ShippingService.Messages/bin/Release
+/src/SolutionExample/Sagas/OrderSaga.Tests/bin/Debug
+/src/SolutionExample/Sagas/OrderSaga.Tests/obj/Debug
