first version of the ui example

--- a/src/SolutionExample/Services/ShippingService/Properties/launchSettings.json
+++ b/src/SolutionExample/Services/ShippingService/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ShippingService": {
       "commandName": "Project",
-      "commandLineArgs": "host start --pause-on-error"
+      "commandLineArgs": "host start --pause-on-error --nodeDebugPort 5860"
     }
   }
 }
