--- a/src/AFBus/AFBus.nuspec
+++ b/src/AFBus/AFBus.nuspec
@@ -14,7 +14,7 @@
     <tags>Azure-Functions Bus</tags>
 	
 	  <dependencies>
-        <dependency id="Newtonsoft.Json" version="[9.0.1]" />
+        <dependency id="Newtonsoft.Json" version="9.0.1" />
 		    <dependency id="WindowsAzure.Storage" version="[8.7.0]" />
         <dependency id="Microsoft.Azure.WebJobs" version="2.1.0" />    
     </dependencies>
