--- a/src/SolutionExample/Services/PaymentService/Properties/launchSettings.json
+++ b/src/SolutionExample/Services/PaymentService/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PaymentService": {
       "commandName": "Project",
-      "commandLineArgs": "host start --pause-on-error"
+      "commandLineArgs": "host start --pause-on-error --nodeDebugPort 5859"
     }
   }
 }
