IoC in PaymentService, some improvements in UIExample

--- a/src/SolutionExample/UI/UIExample/UIExample.csproj
+++ b/src/SolutionExample/UI/UIExample/UIExample.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\**" />
+    <Content Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
 
@@ -27,10 +34,6 @@
     <PackageReference Include="Microsoft.AspNetCore.All">
       <Version>2.0.6</Version>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
