--- a/src/AFBus/AFBus.nuspec
+++ b/src/AFBus/AFBus.nuspec
@@ -9,7 +9,7 @@
 	  <projectUrl>https://github.com/organization-quintasenergy/Azure-Functions-Bus</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Azure Function Bus</description>
-    <releaseNotes>Each saga instance message execution is locked.</releaseNotes>
+    <releaseNotes>Dependency injection</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>Azure-Functions Bus</tags>
 	
