More progress in SignalR

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /src/SolutionExample/UI/UIExample/bin/Debug
 /src/SolutionExample/UI/UIExample/obj
 
+/src/SolutionExample/UI/UIExample/node_modules
