--- a/src/AFBus.Tests/packages.config
+++ b/src/AFBus.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net471" />
   <package id="Microsoft.Azure.WebJobs" version="2.1.0" targetFramework="net462" />
   <package id="Microsoft.Azure.WebJobs.Core" version="2.1.0" targetFramework="net462" />
@@ -9,6 +10,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="Moq" version="4.8.2" targetFramework="net462" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net471" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
@@ -58,7 +60,9 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="WindowsAzure.Storage" version="8.7.0" targetFramework="net462" />
