--- a/src/AFBusCore/AFBusCore.csproj
+++ b/src/AFBusCore/AFBusCore.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>QuintasEnergy</Authors>
+    <Product>AFBus</Product>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageTags>Azure-Functions Bus</PackageTags>
+    <PackageProjectUrl>https://github.com/organization-quintasenergy/Azure-Functions-Bus</PackageProjectUrl>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
+    <Version>1.0.0-beta1</Version>
+    <PackageId>AFBusCore</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
