Example to .net standard

--- a/src/SolutionExample/Sagas/OrderSaga/local.settings.json
+++ b/src/SolutionExample/Sagas/OrderSaga/local.settings.json
@@ -5,8 +5,8 @@
     "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
     "LockSagas": "True"
   },
-  "Host": {
-    "LocalHttpPort": 7071,
-    "CORS": "*"
-  }
+
+  "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+  "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
+  "LockSagas": "True"
 }
