--- a/src/SolutionExample/Services/ShippingService/local.settings.json
+++ b/src/SolutionExample/Services/ShippingService/local.settings.json
@@ -7,5 +7,9 @@
   "Host": {
     "LocalHttpPort": 7073,
     "CORS": "*"
-  }
+  },
+
+  "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+  "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
+  "LockSagas": "True"
 }
