--- a/src/SolutionExample/UI/UIExample/appsettings.json
+++ b/src/SolutionExample/UI/UIExample/appsettings.json
@@ -4,5 +4,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+
+  "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+  "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
+  "LockSagas": "True"
 }
