--- a/src/SolutionExample/Sagas/OrderSaga.Tests/packages.config
+++ b/src/SolutionExample/Sagas/OrderSaga.Tests/packages.config
@@ -2,27 +2,41 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net462" />
-  <package id="Microsoft.Azure.WebJobs" version="2.1.0" targetFramework="net462" />
-  <package id="Microsoft.Azure.WebJobs.Core" version="2.1.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.WebJobs" version="3.0.0-beta5" targetFramework="net462" />
+  <package id="Microsoft.Azure.WebJobs.Core" version="3.0.0-beta5" targetFramework="net462" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="Moq" version="4.8.2" targetFramework="net462" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net462" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net462" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
   <package id="System.Console" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
+  <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
@@ -45,6 +59,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" />
@@ -60,6 +75,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.8.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
