--- a/src/SolutionExample/Sagas/OrderSaga/OrderSaga.csproj
+++ b/src/SolutionExample/Sagas/OrderSaga/OrderSaga.csproj
@@ -1,20 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.7.0" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta5" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\AFBus\AFBus.csproj" />
+    <ProjectReference Include="..\..\..\AFBusCore\AFBusCore.csproj" />
+
     <ProjectReference Include="..\..\Services\PaymentService.Messages\PaymentService.Messages.csproj" />
     <ProjectReference Include="..\..\Services\ShippingService.Messages\ShippingService.Messages.csproj" />
     <ProjectReference Include="..\OrderSagaMessages\OrderSaga.Messages.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
