publish event into service bus

--- a/src/AFBusCore.Tests/AFBusCore.Tests.csproj
+++ b/src/AFBusCore.Tests/AFBusCore.Tests.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="gitignoreappsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
