--- a/src/AFBusCore/AFBusCore.csproj
+++ b/src/AFBusCore/AFBusCore.csproj
@@ -11,9 +11,11 @@
     <FileVersion>1.3.0.0</FileVersion>
     <Version>1.0.0-beta11</Version>
     <PackageId>AFBusCore</PackageId>
+    <RootNamespace>AFBus</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.0.2" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta5" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.0" />
   </ItemGroup>
