- different appsettings for each environment - locksaga set to true by default

--- a/src/SolutionExample/Sagas/OrderSaga/OrderSaga.csproj
+++ b/src/SolutionExample/Sagas/OrderSaga/OrderSaga.csproj
@@ -16,10 +16,14 @@
     <ProjectReference Include="..\OrderSagaMessages\OrderSaga.Messages.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="local.settings.json">
+    <None Update="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
